objects/Platform_Integration_Junction__c.object
<CustomObject>
    <description>What it does?  Object connecting platforms and integration solutions.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.

Part of the DEMO REQUEST process.</description>
    <fields>
        <fullName>Demonstrable__c</fullName>
        <description>What it does?  Shows whether the platform integration is demonstrable.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <formula>Integration_Solution__r.Demonstrable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demonstrable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Name__c</fullName>
        <description>What it does?  Holds the name of the platform integration.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <formula>Integration_Solution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integration Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Solution__c</fullName>
        <description>What it does?  Holds a link between integration solutions and the platform.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Integration Solution</label>
        <referenceTo>Integration_Solution__c</referenceTo>
        <relationshipLabel>Platform</relationshipLabel>
        <relationshipName>Platform_Integration_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>What it does?  Holds a link between a platform and an integration.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Platform</label>
        <referenceTo>Platform__c</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Platform_Integration_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Platform Integration Junction</label>
    <nameField>
        <displayFormat>PLINT-{YYYY}-{MM}-{0000}</displayFormat>
        <label>Platform Integration Junction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Integration Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>